--- a/OTONO2016/Tarea.tex
+++ b/OTONO2016/Tarea.tex
@@ -13,11 +13,17 @@
 \usepackage{soul}%sombreado
 \usepackage[pdftex]{color}
 \usepackage{semantic}
+\usepackage{float}
+\usepackage{definitions}
+\usepackage{array}
+\usepackage{longtable}
+\usepackage{xcolor,colortbl}
+\usepackage{multirow}
 
 \newcommand{\nvector}[2][a]{#1_{1},#1_{2},#1_{3},\cdots #1_{#2}}
 \newcommand{\vect}{(x_1,x_2,\dots,x_n)}
 \newcommand\gij[3]{\Gamma \vdash #1 \Rightarrow #2 : #3 }
-\newcommand\rulename[1]{\mathrm{[{#1}]}}
+\newcommand\rulename[1]{\mathrm{(#1)}}
 \newcommand{\nothing}{\varnothing} % different from \emptyset
 \newcommand{\tto}{\longrightarrow}
 \newcommand{\env}{{\Gamma \vdash}}
