viernes trece de mayo

--- a/OTONO2016/Tarea1/Tarea.tex
+++ b/OTONO2016/Tarea1/Tarea.tex
@@ -6,11 +6,10 @@
 \usepackage[T1]{fontenc}
 \usepackage{ebproof}
 \usepackage{amssymb} % To provide the \varnothing symbol
-\usepackage[latin1]{inputenc} % acentos sin codigo
 \usepackage{verbatim} % comentarios
-\usepackage[spanish]{babel}
+%\usepackage[spanish]{babel}
 \usepackage{mathtools}
-\usepackage{setspace}
+%\usepackage{setspace}
 \usepackage{soul}%sombreado
 \usepackage[pdftex]{color}
 \usepackage{semantic}
